bdr.BDR2.scala.error
Compilation error:
BDR2:7: error: identifier expected but integer literal found.
  case readMessage() if readMessage() == "C" => forward(steps:3)
                                                              ^BDR2:18: error: ')' expected but '}' found.
}
^